deployment-hello-python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibonacci
spec:
  selector:
    matchLabels:
      app: fibonacci
  replicas: 1
  template:
    metadata:
      labels:
        app: fibonacci
    spec:
      containers:
      - name: fibonacci
        image: vaspapts/fibonacci:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "80m"
          requests:
            memory: "128Mi"
            cpu: "80m"
        ports:
        - containerPort: 5000
        
---
apiVersion: v1
kind: Service
metadata:
  name: fibonacci-svc
spec:
  selector:
    app: fibonacci
  ports:
  - protocol: "TCP"
    port: 5000
  type: NodePort
