ingress-example.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-node-sample-helloworld
  annotations:
    # Target URI where the traffic must be redirected
    # More info: https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/rewrite/README.md
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # Uncomment the below to only allow traffic from this domain and route based on it
    - host: sample.host # your domain name with A record pointing to the nginx-ingress-controller IP
    - http:
        paths:
        - path: / # Everything on this path will be redirected to the rewrite-target
          backend:
            serviceName: prometheus-demo-app # the exposed svc name and port
            servicePort: 8080
        - path: /mytest # Everything on this path will be redirected to the rewrite-target
          backend:
            serviceName: svc-node-sample-helloworld # the exposed svc name and port
            servicePort: 3000 
        - path: /web2 # Everything on this path will be redirected to the rewrite-target
          backend:
            serviceName: web2 # the exposed svc name and port
            servicePort: 8080 
        - path: /hello-python # Everything on this path will be redirected to the rewrite-target
          backend:
            serviceName: hello-python # the exposed svc name and port
            servicePort: 5000
